tests/programs/fail/hallo_world.vi

use #std::IO::{
  println,
  println,
  print_ln,
};

pub fn main(#std::IO) {
  io.println(hallo, world)
}
